force-app/main/default/objects/Entry_Category__c/Entry_Category__c.object-meta.xml
<CustomObject>
    <label>Entry Category</label>
    <nameField>
        <displayFormat>ECC-{YYYY}{MM}{0000}</displayFormat>
        <label>Entry Category Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Entry Category</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>