force-app/main/default/objects/Entry_Category__c/fields/Exhibition_Expense__c.field-meta.xml
<CustomField>
    <fullName>Exhibition_Expense__c</fullName>
    <label>Exhibition Expense</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>