force-app/main/default/objects/Entry_Category__c/fields/Store_Name__c.field-meta.xml
<CustomField>
    <fullName>Store_Name__c</fullName>
    <label>Store Name</label>
    <referenceTo>Shop__c</referenceTo>
    <relationshipLabel>Entry Category</relationshipLabel>
    <relationshipName>Entry_Category</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>